--- a/Activity.html
+++ b/Activity.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <style>
-body  {background-color:#19AEB0D9 ;}
+body  {background-color: url(images\ \(13\).jpeg)
+     ;}
 h1   {color: blue;}
 p    {color: blue;}
 </style>
