--- a/Activity.html
+++ b/Activity.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <style>
-body  {background-color: url(images\ \(13\).jpeg)
+body  {background-color: url(images (13).jpeg).jpeg)
      ;}
 h1   {color: blue;}
 p    {color: blue;}
