--- a/Activity 4.html
+++ b/Activity 4.html
@@ -3,7 +3,7 @@
     <head>
       <style>
           body{
-          background-image: url(/Brown.png);
+          background-image: url(Brown and Cream Aesthetic Paper Background Instagram Story.png);
           background-repeat: no-repeat;
           background-size:cover;
           }
